mobile portfolio section small bug fixed

--- a/src/pages/Portfolio/Portfolio.scss
+++ b/src/pages/Portfolio/Portfolio.scss
@@ -52,6 +52,7 @@
                         background-color: rgba($color: #000000, $alpha: 0.9);
                         position: absolute;
                         top: 0;
+                        left: 0;
                         display: none;
                         animation: fadeIn .7s;
                         animation-fill-mode: forwards;
@@ -120,6 +121,20 @@
     }
     .portfolio-cards-item{
         width: 295px !important;
+    }
+    .project-name{
+        letter-spacing: normal;
+        font-size: 18px;
+    }
+    .project-techs{
+        border: 1px solid white;
+        border-radius: 5px;
+        padding: 6px;
+        margin: 3px;
+        font-size: 12px;
+    }
+    .githubLink-btn{
+        font-size: 12px;
     }
     .card-container-img{
         img{
